--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my third githab page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>New codding</p>
+    <h1>khob jamela githab</h1>
+    <h2>inshaallah ami parbo</h2>
     
 </body>
 </html>
