--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>New codding</p>
     <h1>khob jamela githab</h1>
     <h2>inshaallah ami parbo</h2>
+    <img src="pexels-taryn-elliott-4099388.jpg"
     
 </body>
 </html>
